# Projekt-BazyDanych

./: .gitmodules  pyproject.toml
source/: conf.py  index.rst
